--- a/source/less/responsive-1200px-min.less
+++ b/source/less/responsive-1200px-min.less
@@ -5,8 +5,8 @@
 
 @media (min-width: 1200px) {
 
-  // // Fixed grid
-  // #grid > .core(@gridColumnWidth1200, @gridGutterWidth1200);
+  // Fixed grid
+  #grid > .core(@gridColumnWidth1200, @gridGutterWidth1200);
 
   // Fluid grid
   #grid > .fluid(@fluidGridColumnWidth1200, @fluidGridGutterWidth1200);
