--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,9 +1,9 @@
 //
-// Scaffolding
+// 脚手架
 // --------------------------------------------------
 
 
-// Body reset
+// Body 样式初始化
 // -------------------------
 
 body {
@@ -16,7 +16,7 @@ body {
 }
 
 
-// Links
+// 链接
 // -------------------------
 
 a {
@@ -30,15 +30,15 @@ a:focus {
 }
 
 
-// Images
+// 图片
 // -------------------------
 
-// Rounded corners
+// 圆角图片
 .img-rounded {
   .border-radius(6px);
 }
 
-// Add polaroid-esque trim
+// 图片拍立得式样式
 .img-polaroid {
   padding: 4px;
   background-color: #fff;
@@ -47,7 +47,7 @@ a:focus {
   .box-shadow(0 1px 3px rgba(0,0,0,.1));
 }
 
-// Perfect circle
+// 完美圆角
 .img-circle {
-  .border-radius(500px); // crank the border-radius so it works with most reasonably sized images
+  .border-radius(500px); 
 }
