--- a/source/less/buttons.less
+++ b/source/less/buttons.less
@@ -22,7 +22,6 @@
   *border: 0; // 处理IE7在input:focus状态下的黑色边框
   border-bottom-color: darken(@btnBorder, 10%);
   .border-radius(@baseBorderRadius);
-  .ie7-restore-left-whitespace(); // Give IE7 some love
   .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
 
   // Hover/focus 状态
@@ -96,7 +95,7 @@
   width: 100%;
   padding-left: 0;
   padding-right: 0;
-  .box-sizing(border-box);
+  .box-sizing(content-box);
 }
 
 input[type="submit"],
