--- a/source/less/responsive-utilities.less
+++ b/source/less/responsive-utilities.less
@@ -1,9 +1,11 @@
 //
-// Responsive: Utility classes
+// Responsive: 响应式处理方法
+// 对 PHONE & SMALL DESKTOPS 不做响应式处理
+// edit by XMFE update 18/06/2013
 // --------------------------------------------------
 
 
-// IE10 Metro responsive
+// IE10 Metro 风格的响应式
 // Required for Windows 8 Metro split-screen snapping with IE10
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
 @-ms-viewport{
@@ -17,7 +19,7 @@
   visibility: hidden;
 }
 
-// Visibility utilities
+// 设置是否可见
 
 // For desktops
 .visible-phone     { display: none !important; }
