--- a/source/less/responsive.less
+++ b/source/less/responsive.less
@@ -1,48 +1,24 @@
 /*!
- * Bootstrap Responsive v2.3.2
+ * xiaomi Responsive v0.1.1
  *
- * Copyright 2012 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
+ * Copyright 2013 XIAOMI, Inc
  *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ * Designed and built  @XMFE.
  */
 
 
 // Responsive.less
-// For phone and tablet devices
+// For 普屏[960px] && 宽屏[1200]
 // -------------------------------------------------------------
 
-
-// REPEAT VARIABLES & MIXINS
-// -------------------------
-// Required since we compile the responsive stuff separately
-
-@import "variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "mixins.less";
-
-
-// RESPONSIVE CLASSES
+// 响应式定义
 // ------------------
 
 @import "responsive-utilities.less";
 
 
-// MEDIA QUERIES
+// MEDIA QUERIES 目前只做1200px响应
 // ------------------
 
-// Large desktops
+// 1200px宽屏显示
 @import "responsive-1200px-min.less";
-
-// // Tablets to regular desktops
-// @import "responsive-768px-979px.less";
-
-// // Phones to portrait tablets and narrow desktops
-// @import "responsive-767px-max.less";
-
-
-// // RESPONSIVE NAVBAR
-// // ------------------
-
-// // From 979px and below, show a button to toggle navbar contents
-// @import "responsive-navbar.less";
