栅格系统落地修改

--- a/source/less/grid.less
+++ b/source/less/grid.less
@@ -3,19 +3,19 @@
 // --------------------------------------------------
 
 
-// Fixed (缺省 960px)
+// Fixed (缺省 950px)
 #grid > .core(@gridColumnWidth, @gridGutterWidth);
 
-// Fluid (缺省 960px)
-#grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
+// // Fluid (缺省 950px)
+// #grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
 
-// 重置处理特殊性实用工具类
-[class*="span"].hide,
-.row-fluid [class*="span"].hide {
-  display: none;
-}
+// // 重置处理特殊性实用工具类
+// [class*="span"].hide,
+// .row-fluid [class*="span"].hide {
+//   display: none;
+// }
 
-[class*="span"].pull-right,
-.row-fluid [class*="span"].pull-right {
-  float: right;
-}
+// [class*="span"].pull-right,
+// .row-fluid [class*="span"].pull-right {
+//   float: right;
+// }
