--- a/source/less/responsive-1200px-min.less
+++ b/source/less/responsive-1200px-min.less
@@ -8,11 +8,11 @@
   // Fixed grid
   #grid > .core(@gridColumnWidth1200, @gridGutterWidth1200);
 
-  // Fluid grid
-  #grid > .fluid(@fluidGridColumnWidth1200, @fluidGridGutterWidth1200);
+  // // Fluid grid
+  // #grid > .fluid(@fluidGridColumnWidth1200, @fluidGridGutterWidth1200);
 
-  // Input grid
-  #grid > .input(@gridColumnWidth1200, @gridGutterWidth1200);
+  // // Input grid
+  // #grid > .input(@gridColumnWidth1200, @gridGutterWidth1200);
 
   // Thumbnails
   .thumbnails {
