--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -137,16 +137,16 @@
 // --------------------------------------------------
 
 
-// 缺省 960PX 栅格
+// 缺省 950PX 栅格
 // -------------------------
-@gridColumns:             12;
-@gridColumnWidth:         60px;
-@gridGutterWidth:         20px;
+@gridColumns:             15;
+@gridColumnWidth:         70px;
+@gridGutterWidth:         10px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
 @gridColumnWidth1200:     70px;
-@gridGutterWidth1200:     30px;
+@gridGutterWidth1200:     10px;
 @gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
 
 // // 768px-979px
@@ -155,14 +155,14 @@
 // @gridRowWidth768:         (@gridColumns * @gridColumnWidth768) + (@gridGutterWidth768 * (@gridColumns - 1));
 
 
-// Fluid grid
-// -------------------------
-@fluidGridColumnWidth:    percentage(@gridColumnWidth/@gridRowWidth);
-@fluidGridGutterWidth:    percentage(@gridGutterWidth/@gridRowWidth);
+// // Fluid grid
+// // -------------------------
+// @fluidGridColumnWidth:    percentage(@gridColumnWidth/@gridRowWidth);
+// @fluidGridGutterWidth:    percentage(@gridGutterWidth/@gridRowWidth);
 
-// 1200px min
-@fluidGridColumnWidth1200:     percentage(@gridColumnWidth1200/@gridRowWidth1200);
-@fluidGridGutterWidth1200:     percentage(@gridGutterWidth1200/@gridRowWidth1200);
+// // 1200px min
+// @fluidGridColumnWidth1200:     percentage(@gridColumnWidth1200/@gridRowWidth1200);
+// @fluidGridGutterWidth1200:     percentage(@gridGutterWidth1200/@gridRowWidth1200);
 
 // // 768px-979px
 // @fluidGridColumnWidth768:      percentage(@gridColumnWidth768/@gridRowWidth768);
