--- a/source/less/grid.less
+++ b/source/less/grid.less
@@ -7,7 +7,7 @@
 #grid > .core(@gridColumnWidth, @gridGutterWidth);
 
 // // Fluid (缺省 950px)
-// #grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
+#grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
 
 // // 重置处理特殊性实用工具类
 // [class*="span"].hide,
